Overflowing problem fixed

--- a/HTML/CSS/projects.css
+++ b/HTML/CSS/projects.css
@@ -223,7 +223,7 @@
     .project1{
         position:relative;
         top: 40vh;
-        height: 36vh;
+        height: 39vh;
         width: 81.5vw;
         margin-left: 10vw;
     }
@@ -256,7 +256,7 @@
     .project2{
         position:relative;
         top: 60vh;
-        height: 36vh;
+        height: 39vh;
         width: 81.5vw;
         left: 5vw;
     }
@@ -279,7 +279,7 @@
     .project3{
         position:relative;
         top: 80vh;
-        height: 36vh;
+        height: 39vh;
         width: 81.5vw;
         left: 3vw;
     }
@@ -287,7 +287,7 @@
         height: 6vh;
         width: 35vw;
         position: relative;
-        top: 385vh;
+        top: 395vh;
         left: 30vw;
     }
 }
